--- a/nginx.yml
+++ b/nginx.yml
@@ -23,40 +23,36 @@
         newly_installed: "{{ newly_installed + 1 }}"
       when: nginx_install_result.changed
 
-    - name: Check if Nginx service is running
-      service_facts:
-
-    - name: Increment already_running if Nginx service is already running
-      set_fact:
-        already_running: "{{ already_running + 1 }}"
-      when: "'nginx' in ansible_facts.services and ansible_facts.services['nginx'].state == 'running'"
-
-    - name: Start and enable Nginx service if not running
+    - name: Ensure Nginx service is running
       service:
         name: nginx
         state: started
         enabled: yes
-      when: "'nginx' not in ansible_facts.services or ansible_facts.services['nginx'].state != 'running'"
       register: nginx_start_result
+
+    - name: Increment already_running if Nginx service is already running
+      set_fact:
+        already_running: "{{ already_running + 1 }}"
+      when: nginx_start_result is not changed and "'nginx' in ansible_facts.services and ansible_facts.services['nginx'].state == 'running'"
 
     - name: Increment newly_started if Nginx service was newly started
       set_fact:
         newly_started: "{{ newly_started + 1 }}"
       when: nginx_start_result.changed
 
-- name: Aggregate and display summary of Nginx installation and running status
-  hosts: localhost
-  gather_facts: no
-  tasks:
-    - name: Aggregate results from all hosts
-      set_fact:
-        global_summary: |
-          Summary:
-          - Hosts with Nginx already installed: {{ groups['web_servers'] | map('extract', hostvars, 'already_installed') | sum }}
-          - Hosts where Nginx was newly installed: {{ groups['web_servers'] | map('extract', hostvars, 'newly_installed') | sum }}
-          - Hosts with Nginx already running: {{ groups['web_servers'] | map('extract', hostvars, 'already_running') | sum }}
-          - Hosts where Nginx was newly started: {{ groups['web_servers'] | map('extract', hostvars, 'newly_started') | sum }}
+  - name: Aggregate and display summary of Nginx installation and running status
+    hosts: localhost
+    gather_facts: no
+    tasks:
+      - name: Aggregate results from all hosts
+        set_fact:
+          global_summary: |
+            Summary:
+            - Hosts with Nginx already installed: {{ groups['web_servers'] | map('extract', hostvars, 'already_installed') | sum }}
+            - Hosts where Nginx was newly installed: {{ groups['web_servers'] | map('extract', hostvars, 'newly_installed') | sum }}
+            - Hosts with Nginx already running: {{ groups['web_servers'] | map('extract', hostvars, 'already_running') | sum }}
+            - Hosts where Nginx was newly started: {{ groups['web_servers'] | map('extract', hostvars, 'newly_started') | sum }}
 
-    - name: Display summary
-      debug:
-        msg: "{{ global_summary }}"
+      - name: Display summary
+        debug:
+          msg: "{{ global_summary }}"
