--- a/nginx.yml
+++ b/nginx.yml
@@ -48,10 +48,10 @@
       set_fact:
         global_summary: |
           Summary:
-          - Hosts with Nginx already installed: {{ groups['web_servers'] | map('extract', hostvars, 'already_installed') | sum }}
-          - Hosts where Nginx was newly installed: {{ groups['web_servers'] | map('extract', hostvars, 'newly_installed') | sum }}
-          - Hosts with Nginx already running: {{ groups['web_servers'] | map('extract', hostvars, 'already_running') | sum }}
-          - Hosts where Nginx was newly started: {{ groups['web_servers'] | map('extract', hostvars, 'newly_started') | sum }}
+          - Hosts with Nginx already installed: {{ groups['web_servers'] | map('extract', hostvars, 'already_installed') | map('int') | sum }}
+          - Hosts where Nginx was newly installed: {{ groups['web_servers'] | map('extract', hostvars, 'newly_installed') | map('int') | sum }}
+          - Hosts with Nginx already running: {{ groups['web_servers'] | map('extract', hostvars, 'already_running') | map('int') | sum }}
+          - Hosts where Nginx was newly started: {{ groups['web_servers'] | map('extract', hostvars, 'newly_started') | map('int') | sum }}
 
     - name: Display summary
       debug:
