--- a/nginx.yml
+++ b/nginx.yml
@@ -1,58 +1,27 @@
 - name: Install and start Nginx
   hosts: web_servers
   become: yes
-  vars:
-    already_installed: 0
-    newly_installed: 0
-    already_running: 0
-    newly_started: 0
   tasks:
-    - name: Check if Nginx package is installed
+    - name: Check if Nginx package is already installed
       yum:
         name: nginx
         state: present
-      register: nginx_install_result
+        check_mode: yes
+      register: nginx_check
 
-    - name: Increment already_installed if Nginx is already installed
-      set_fact:
-        already_installed: "{{ already_installed + 1 }}"
-      when: not nginx_install_result.changed
+    - name: Skip Nginx installation if already installed
+      debug:
+        msg: "Nginx is already installed, skipping installation."
+      when: nginx_check.changed == false
 
-    - name: Increment newly_installed if Nginx is newly installed
-      set_fact:
-        newly_installed: "{{ newly_installed + 1 }}"
-      when: nginx_install_result.changed
+    - name: Install Nginx package if not already installed
+      yum:
+        name: nginx
+        state: present
+      when: nginx_check.changed == true
 
     - name: Ensure Nginx service is running
       service:
         name: nginx
         state: started
         enabled: yes
-      register: nginx_start_result
-
-    - name: Increment already_running if Nginx service is already running
-      set_fact:
-        already_running: "{{ already_running + 1 }}"
-      when: nginx_start_result is not changed and "'nginx' in ansible_facts.services and ansible_facts.services['nginx'].state == 'running'"
-
-    - name: Increment newly_started if Nginx service was newly started
-      set_fact:
-        newly_started: "{{ newly_started + 1 }}"
-      when: nginx_start_result.changed
-
-- name: Aggregate and display summary of Nginx installation and running status
-  hosts: localhost
-  gather_facts: no
-  tasks:
-    - name: Aggregate results from all hosts
-      set_fact:
-        global_summary: |
-          Summary:
-          - Hosts with Nginx already installed: {{ groups['web_servers'] | map('extract', hostvars, 'already_installed') | map('int') | sum }}
-          - Hosts where Nginx was newly installed: {{ groups['web_servers'] | map('extract', hostvars, 'newly_installed') | map('int') | sum }}
-          - Hosts with Nginx already running: {{ groups['web_servers'] | map('extract', hostvars, 'already_running') | map('int') | sum }}
-          - Hosts where Nginx was newly started: {{ groups['web_servers'] | map('extract', hostvars, 'newly_started') | map('int') | sum }}
-
-    - name: Display summary
-      debug:
-        msg: "{{ global_summary }}"
