--- a/nginx.yml
+++ b/nginx.yml
@@ -25,3 +25,18 @@
         name: nginx
         state: started
         enabled: yes
+
+    - name: Check if Nginx service is running
+      service_facts:
+    
+    - name: Skip Nginx start if already running
+      debug:
+        msg: "Nginx service is already running, skipping start."
+      when: "'nginx' in ansible_facts.services and ansible_facts.services['nginx'].state == 'running'"
+
+    - name: Start Nginx service if not running
+      service:
+        name: nginx
+        state: started
+        enabled: yes
+      when: "'nginx' not in ansible_facts.services or ansible_facts.services['nginx'].state != 'running'"
